tests/invalid/subsystem_ref_not_found.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "SubsystemRefNotFound",
    "description": "Invalid: subsystem reference points to a nonexistent local file. Expected error: ref_not_found.",
    "authors": ["Test Suite"],
    "created": "2026-04-10T00:00:00Z"
  },
  "models": {
    "Atmosphere": {
      "variables": {
        "temp": {
          "type": "parameter",
          "units": "K",
          "default": 300
        }
      },
      "equations": [],
      "subsystems": {
        "Missing": { "ref": "./does_not_exist.esm" }
      }
    }
  }
}
